--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "parbat",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
