--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-node_modules
+#dependencies
+/node_modules
+
+
+# production
+/build
+
+#misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
