email verification method implenting

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.9",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.15",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.3.0"
