--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemailer": "^6.7.5",
     "nodemon": "^2.0.15",
     "swagger-jsdoc": "^6.2.1",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "yamljs": "^0.3.0"
   }
 }
